--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,89 @@
 # NetBird VPN Docker-Compose 配置文件
 # 部署目录：/data/netbird/
 # 公网IP：120.50.145.50
+# 数据库：PostgreSQL（替代默认SQLite）
 
 version: "3.8"
 
 services:
-  # NetBird 管理服务
+  # PostgreSQL 数据库（管理端数据库）
+  postgres:
+    image: postgres:16-alpine
+    container_name: netbird-postgres
+    restart: always
+    environment:
+      - POSTGRES_DB=netbird
+      - POSTGRES_USER=netbird
+      - POSTGRES_PASSWORD=NetBirdDB2024!
+      - POSTGRES_INITDB_ARGS=--encoding=UTF-8 --lc-collate=C --lc-ctype=C
+    volumes:
+      - ./postgres:/var/lib/postgresql/data
+      - ./postgres-init:/docker-entrypoint-initdb.d  # 初始化脚本目录
+    ports:
+      - "5432:5432"  # 可选：如需外部访问数据库
+    networks:
+      - netbird
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U netbird -d netbird"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # NetBird 管理服务（连接PostgreSQL）
   management:
     image: netbirdio/management:v0.47.2
     container_name: netbird-management
     restart: always
+    depends_on:
+      postgres:
+        condition: service_healthy
     volumes:
       - ./management:/var/lib/netbird
       - ./config:/etc/netbird
     environment:
-      - NB_MANAGEMENT_DOMAIN=your.domain.com
-      - NB_MANAGEMENT_LETSENCRYPT_ENABLED=true
-      - NB_MANAGEMENT_ADMIN_EMAIL=admin@your.domain.com
-      - NB_MANAGEMENT_SINGLE_ACCOUNT_MODE_DOMAIN=netbird.local
-      - NB_MANAGEMENT_DISABLE_ANONYMOUS_METRICS=true
-      - NB_LOG_LEVEL=info
+      # PostgreSQL 数据库配置（官方环境变量）
+      - NETBIRD_STORE_ENGINE_POSTGRES_DSN=postgres://netbird:NetBirdDB2024!@postgres:5432/netbird?sslmode=disable
+      
+      # 管理服务基础配置
+      - NETBIRD_MGMT_SINGLE_ACCOUNT_MODE_DOMAIN=netbird.local
+      - NETBIRD_DISABLE_ANONYMOUS_METRICS=true
+      
+      # 可选：数据库连接池配置
+      - NETBIRD_STORE_ENGINE_POSTGRES_MAX_OPEN_CONNS=25
+      - NETBIRD_STORE_ENGINE_POSTGRES_MAX_IDLE_CONNS=5
+      - NETBIRD_STORE_ENGINE_POSTGRES_CONN_MAX_LIFETIME=1h
     ports:
-      - "443:443"
-      - "80:80"
+      - "33073:33073"  # Management API & gRPC
+      - "443:443"     # HTTPS (如果启用Let's Encrypt)
+      - "80:80"       # HTTP (用于Let's Encrypt验证)
+    networks:
+      - netbird
+    command: [
+      "--port", "33073",
+      "--log-file", "console",
+      "--disable-anonymous-metrics=true",
+      "--single-account-mode-domain=netbird.local",
+      "--dns-domain=netbird.selfhosted"
+    ]
+
+  # NetBird Dashboard (Web UI)
+  dashboard:
+    image: netbirdio/dashboard:v0.47.2
+    container_name: netbird-dashboard
+    restart: always
+    depends_on:
+      - management
+    environment:
+      # Management API 端点配置
+      - NETBIRD_MGMT_API_ENDPOINT=http://management:33073
+      - NETBIRD_MGMT_GRPC_API_ENDPOINT=http://management:33073
+      
+      # 可选：SSL配置
+      - NGINX_SSL_PORT=443
+      - LETSENCRYPT_DOMAIN=your.domain.com
+      - LETSENCRYPT_EMAIL=admin@your.domain.com
+    ports:
+      - "8080:80"     # Dashboard HTTP端口
     networks:
       - netbird
 
@@ -31,11 +92,10 @@ services:
     image: netbirdio/signal:v0.47.2
     container_name: netbird-signal
     restart: always
-    environment:
-      - SIGNAL_ADDR=:10000
-      - NB_LOG_LEVEL=info
+    volumes:
+      - ./signal:/var/lib/netbird
     ports:
-      - "10000:10000"
+      - "10000:10000"  # Signal gRPC API
     networks:
       - netbird
 
@@ -44,11 +104,10 @@ services:
     image: netbirdio/relay:v0.47.2
     container_name: netbird-relay
     restart: always
-    environment:
-      - RELAY_ADDR=:3478
-      - NB_LOG_LEVEL=info
+    volumes:
+      - ./relay:/var/lib/netbird
     ports:
-      - "33073:33073"
+      - "33080:33080"  # Relay端口
     networks:
       - netbird
 
@@ -59,45 +118,14 @@ services:
     restart: always
     volumes:
       - ./turn:/var/lib/coturn
-    environment:
-      - DETECT_EXTERNAL_IP=yes
+      - ./turnserver.conf:/etc/turnserver.conf:ro
     ports:
-      - "3478:3478/udp"
-      - "3478:3478/tcp"
-      - "49152-65535:49152-65535/udp"
-    command: >
-      --log-file=stdout
-      --external-ip=120.50.145.50
-      --listening-ip=0.0.0.0
-      --relay-ip=120.50.145.50
-      --min-port=49152
-      --max-port=65535
-      --realm=netbird.local
-      --user=netbird:NetBird2024!
-      --fingerprint
-      --lt-cred-mech
-      --no-cli
-      --no-tls
-      --no-dtls
-      --no-software-attribute
-      --pidfile="/var/tmp/turnserver.pid"
+      - "3478:3478/udp"        # STUN/TURN端口
+      - "3478:3478/tcp"        # STUN/TURN端口
+      - "49152-65535:49152-65535/udp"  # 动态端口范围
     networks:
       - netbird
-
-  # PostgreSQL 数据库（可选，默认使用 SQLite）
-  postgres:
-    image: postgres:16-alpine
-    container_name: netbird-postgres
-    restart: always
-    environment:
-      - POSTGRES_DB=netbird
-      - POSTGRES_USER=netbird
-      - POSTGRES_PASSWORD=NetBirdDB2024!
-    volumes:
-      - ./postgres:/var/lib/postgresql/data
-    networks:
-      - netbird
-    # 如果不需要 PostgreSQL，可以注释掉这个服务
+    command: ["-c", "/etc/turnserver.conf"]
 
 networks:
   netbird:
