--- a/turnserver.conf
+++ b/turnserver.conf
@@ -1,43 +1,43 @@
 # NetBird Coturn TURN服务器配置文件
-# 适用于公网IP: 120.50.145.50
+# 基于官方 getting-started-with-zitadel.sh 脚本
 
-# 监听配置
-listening-ip=0.0.0.0
-external-ip=120.50.145.50
-relay-ip=120.50.145.50
+# 监听端口
+listening-port=3478
+
+# 外部IP配置（将由部署脚本自动设置）
+#external-ip=
+
+# TLS监听端口
+tls-listening-port=5349
 
 # 端口范围配置
-listening-port=3478
 min-port=49152
 max-port=65535
 
-# 域配置
-realm=netbird.local
-server-name=netbird.local
-
-# 认证配置
-lt-cred-mech
-user=netbird:NetBird2024!
-
-# 安全配置
+# 启用指纹验证
 fingerprint
-no-cli
-no-tls
-no-dtls
+
+# 使用长期凭证机制
+lt-cred-mech
+
+# 用户认证配置（将由部署脚本设置）
+user=self:password
+
+# 域配置
+realm=wiretrustee.com
+
+# TLS证书配置
+cert=/etc/coturn/certs/cert.pem
+pkey=/etc/coturn/private/privkey.pem
 
 # 日志配置
 log-file=stdout
-verbose
 
-# 性能配置
-total-quota=100
-stale-nonce=600
-
-# 其他安全选项
+# 不显示软件版本信息
 no-software-attribute
+
+# PID文件
 pidfile="/var/tmp/turnserver.pid"
 
-# 允许的客户端IP范围（可选）
-# denied-peer-ip=10.0.0.0-10.255.255.255
-# denied-peer-ip=192.168.0.0-192.168.255.255
-# denied-peer-ip=172.16.0.0-172.31.255.255 
+# 禁用CLI
+no-cli 
